refactor(lesson): improve attendee sync and use ErrorMessages constants
- Refactor LessonCommandService for cleaner attendee synchronization
- Use addAttendeesIfAbsent and removeAttendeesByStudentIds methods
- Apply ErrorMessages constants in LessonFactory